--- a/pages/index.html
+++ b/pages/index.html
@@ -44,11 +44,11 @@
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
-                  <div class="popular_cart position-relative">
+                  <a href="./cart.html" class="popular_cart position-relative">
                     <span class="material-symbols-outlined position-relative z-1">
                       shopping_cart
                     </span>
-                  </div>
+                  </a>
                 </div>
               </div>
             </a>
@@ -85,11 +85,11 @@
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-primary-2 popular_price fw-bold">NT$ 600 起</p>
-                  <div class="popular_cart position-relative">
+                  <a href="./cart.html" class="popular_cart position-relative">
                     <span class="material-symbols-outlined position-relative z-1">
                       shopping_cart
                     </span>
-                  </div>
+                  </a>
                 </div>
               </div>
             </a>
@@ -110,11 +110,11 @@
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-primary-2 popular_price fw-bold">NT$ 3,500 起</p>
-                  <div class="popular_cart position-relative">
+                  <a href="./cart.html" class="popular_cart position-relative">
                     <span class="material-symbols-outlined position-relative z-1">
                       shopping_cart
                     </span>
-                  </div>
+                  </a>
                 </div>
               </div>
             </a>
@@ -135,11 +135,11 @@
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
-                  <div class="popular_cart position-relative">
+                  <a href="./cart.html" class="popular_cart position-relative">
                     <span class="material-symbols-outlined position-relative z-1">
                       shopping_cart
                     </span>
-                  </div>
+                  </a>
                 </div>
               </div>
             </a>
