合併購物車與旅程介紹

--- a/pages/index-member.html
+++ b/pages/index-member.html
@@ -17,7 +17,7 @@
 
 <body>
   <section class="banner">
-    <%- include('./layout/header'); -%>
+    <%- include('./layout/header-member'); -%>
     <div class="contenter z-3 ">
       <div class="d-flex flex-column align-items-center justify-content-between px-lg-10 py-lg-13 py-8 position-relative">
         <img src="../assets/images/logo.png" width="147px" height="56px" alt="logo" class="object-fit-cover mb-lg-10 mb-8">
@@ -28,7 +28,6 @@
       </div>
     </div>
   </section>
-
   <%- include('./layout/footer'); -%>
 
   <script type="module" src="../main.js"></script>
