修正圖片跑版

--- a/pages/singleTrip.html
+++ b/pages/singleTrip.html
@@ -402,10 +402,9 @@
                   </div>
                   <div class="comment-photo mb-4">
                     <div class="d-flex justify-content-between">
-                      <img src="/assets/images/trip-content-pic1.png" alt="" class="pic-sm me-2">
-                      <img src="/assets/images/trip-content-pic2.png" alt="" class="pic-sm me-2">
-                      <img src="/assets/images/trip-content-pic3.png" alt="" class="pic-sm
-                        ">
+                      <img src="/assets/images/trip-content-pic1.png" alt="" class=" rounded-3 pic-sm me-2">
+                      <img src="/assets/images/trip-content-pic2.png" alt="" class=" rounded-3 pic-sm me-2">
+                      <img src="/assets/images/trip-content-pic3.png" alt="" class=" rounded-3 pic-sm">
                     </div>
                     <div class="comment-photo-postion custom-btn-all">
                       <button class="d-flex custom-4s" data-bs-toggle="modal" data-bs-target="#commentModal">
@@ -452,11 +451,9 @@
                   </div>
                   <div class="comment-photo mb-4">
                     <div class="d-flex justify-content-between">
-                      <img src="/assets/images/trip-content-pic4.png" alt="" class=" rounded-3 object-fit-cover pic-sm me-2">
-                      <img src="/assets/images/trip-content-pic5.png" alt="" class=" rounded-3 object-fit-cover pic-sm
-                        me-2">
-                      <img src="/assets/images/trip-content-pic6.png" alt="" class=" rounded-3 object-fit-cover pic-sm
-                        ">
+                      <img src="/assets/images/trip-content-pic5.png" alt="" class=" rounded-3 pic-sm me-2">
+                      <img src="/assets/images/trip-content-pic6.png" alt="" class=" rounded-3 pic-sm me-2">
+                      <img src="/assets/images/trip-content-pic7.png" alt="" class=" rounded-3 pic-sm">
                     </div>
                     <div class="comment-photo-postion custom-btn-all">
                       <button class="d-flex custom-4s" data-bs-toggle="modal" data-bs-target="#commentModal">
@@ -503,10 +500,9 @@
                   </div>
                   <div class="comment-photo mb-4">
                     <div class="d-flex justify-content-between">
-                      <img src="/assets/images/trip-content-pic7.png" alt="" class="pic-sm me-2">
-                      <img src="/assets/images/trip-content-pic8.png" alt="" class="pic-sm me-2">
-                      <img src="/assets/images/trip-content-pic9.png" alt="" class="pic-sm
-                        ">
+                      <img src="/assets/images/trip-content-pic7.png" alt="" class=" rounded-3 pic-sm me-2">
+                      <img src="/assets/images/trip-content-pic8.png" alt="" class=" rounded-3 pic-sm me-2">
+                      <img src="/assets/images/trip-content-pic9.png" alt="" class=" rounded-3 pic-sm">
                     </div>
                     <div class="comment-photo-postion custom-btn-all">
                       <button class="d-flex custom-4s" data-bs-toggle="modal" data-bs-target="#commentModal">
