--- a/pages/memberCenter.html
+++ b/pages/memberCenter.html
@@ -7,13 +7,14 @@
 </head>
 
 <body>
+    <%- include('./layout/header-forpageMember'); -%>
     <section class="filter container">
         <%- include('./layout/memberCenterFilter'); -%>
     </section>
     <section class="orderList">
         <div class="container">
             <ul>
-                <li class="p-4 bg-neutral-8 rounded-4 mb-4">
+                <li class="p-4 bg-neutral-8 rounded-4 mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" >
                     <div class="text-neutral-3 fw-medium mb-4">
                         訂單編號 : travelorder000011
                     </div>
@@ -32,7 +33,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="p-4 bg-neutral-8 rounded-4 mb-4">
+                <li class="p-4 bg-neutral-8 rounded-4 mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" >
                     <div class="text-neutral-3 fw-medium mb-4">
                         訂單編號 : travelorder000012
                     </div>
@@ -51,7 +52,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="p-4 bg-neutral-8 rounded-4 mb-4">
+                <li class="p-4 bg-neutral-8 rounded-4 mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" >
                     <div class="text-neutral-3 fw-medium mb-4">
                         訂單編號 : travelorder000013
                     </div>
@@ -70,7 +71,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="p-4 bg-neutral-8 rounded-4 mb-4">
+                <li class="p-4 bg-neutral-8 rounded-4 mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" >
                     <div class="text-neutral-3 fw-medium mb-4">
                         訂單編號 : travelorder000014
                     </div>
@@ -89,7 +90,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="p-4 bg-neutral-8 rounded-4 mb-4">
+                <li class="p-4 bg-neutral-8 rounded-4 mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" >
                     <div class="text-neutral-3 fw-medium mb-4">
                         訂單編號 : travelorder000015
                     </div>
@@ -151,6 +152,7 @@
             </div>
         </div>
     </section>
+    <%- include('./layout/memberOrderModal'); -%>
     <%- include('./layout/footer'); -%>
 
         <script type="module" src="../main.js"></script>
