--- a/pages/memberCenter.html
+++ b/pages/memberCenter.html
@@ -2,14 +2,85 @@
 <html lang="en">
   <head>
     <%- include('./layout/head'); -%>
-    <title>memberCenter</title>
+    <title>會員中心</title>
   </head>
   <body>
-    <section class="filter container">
-      <%- include('./layout/memberCenterFilter'); -%>
+
+    <%- include('./layout/header'); -%>
+
+    <section class="container py-lg-12 py-8">
+      <div class="d-flex w-100 overflow-hidden">
+        <input type="checkbox" name="" id="sideMenu-active" />
+        <div class="d-lg-block d-none px-0 sideMenu-container">
+          <div class="border border-1 border-primary-3 pt-6 sideMenu">
+
+            <a href="./memberCenter.html" class="d-flex flex-column align-items-center mb-6">
+              <img src="/assets/images/member-photo.png" alt="member-photo" class="mb-2" width="84px" height="84px">
+                <p class="fw-medium fs-5 text-black lh-12">claire</p>
+            </a>
+
+            <ul class="member-menu d-flex justify-content-center flex-column mb-6">
+              <li class="py-8-5 bg-neutral-6 text-neutral-3 fw-medium fs-5 lh-12">
+                帳戶管理
+              </li>
+              <li>
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">我的帳戶</a>
+              </li>
+              <li>
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">我的訂單</a>
+              </li>
+              <li>
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">我的收藏</a>
+              </li>
+              <li>
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">我的評論</a>
+              </li>
+            </ul>
+
+            <ul class="member-menu d-flex justify-content-center flex-column mb-6">
+              <li class="py-8-5 bg-neutral-6 text-neutral-3 fw-medium fs-5 lh-12">
+                賣場管理
+              </li>
+              <li>
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">成為廠商</a>
+              </li>
+              <li>
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">商品名稱</a>
+              </li>
+              <li>
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">訂單管理</a>
+              </li>
+              <li>
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">廠商審核</a>
+              </li>
+              <li class="mb-6">
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">會員管理</a>
+              </li>
+              <li class="mb-6 border-top border-4 border-neutral-6"></li>
+              <li>
+                <a href="#" class="py-8-5 fw-medium fs-5 lh-12">登出</a>
+              </li>
+            </ul>
+
+            <label for="sideMenu-active" class="sideMenu-switch material-symbols-outlined">
+              keyboard_double_arrow_left
+            </label>
+          </div>
+        </div>
+        
+        <div class="filter ms-6">
+          <h2 class="filter-text fw-bold lh-12 fs-2 mb-lg-8 mb-6">訂單管理</h3>
+          <%- include('./layout/memberCenterFilter'); -%>
+        </div>
+      </div>
     </section>
-    <%- include('./layout/footer'); -%>
+  
+
+
+
+
     
+    <%- include('./layout/footer'); -%>
     <script type="module" src="../main.js"></script>
     <script type="module" src="../assets/js/collect-love.js"></script>
     <script type="module" src="../assets/js/travel_swiper.js"></script>
