--- a/pages/index-member.html
+++ b/pages/index-member.html
@@ -24,16 +24,21 @@
         <h1 class="display-3 fw-semibold text-white mb-lg-10 mb-8">每段旅程，都是一段故事</h1>
         <!--datepicker ejs-->
         <%- include('./layout/datepicker'); -%>
-        <a href="#"><span class="material-symbols-outlined custom-icon text-center" >keyboard_double_arrow_down</span></a>    
+        <a href="#"><span class="material-symbols-outlined custom-icon text-center">keyboard_double_arrow_down</span></a>
       </div>
     </div>
   </section>
+
+  <%- include('./layout/index-content'); -%>
   <%- include('./layout/footer'); -%>
 
+
   <script type="module" src="../main.js"></script>
+  <script type="module" src="../assets/js/collect-love.js"></script>
+  <script type="module" src="../assets/js/travel_swiper.js"></script>
+  <script type="module" src="../assets/js/filter_dorpdown.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-
 
 </body>
 
