Modify booking button

--- a/pages/singleTrip.html
+++ b/pages/singleTrip.html
@@ -105,7 +105,7 @@
                 </ul>
               </div>
               <div class="custom-btn-all ">
-                <button class="btn px-xl-7 px-lg-6 py-3 ms-5 fs-5 rounded-pill">搜尋</button>
+                <button class="btn px-xxl-7 px-xl-6 px-lg-4 py-3 ms-5 fs-6 rounded-pill">預訂行程</button>
               </div>
             </div>
           </div>
@@ -147,7 +147,7 @@
                 </ul>
               </div>
               <div class="custom-btn-all w-100 row">
-                <button class="btn col-12 fs-5 py-4 rounded-pill ">搜尋</button>
+                <button class="btn col-12 fs-5 py-4 rounded-pill ">預訂行程</button>
               </div>
             </div>
           </div>
