hotfix/singleTrip/Banner - 調整 banner section 與 nav 之間距 - 調整 點讚分享 icon 在小螢幕尺寸的排版 - 調整 btn-更多照片 的間距與小螢幕尺寸的樣式

--- a/pages/singleTrip.html
+++ b/pages/singleTrip.html
@@ -8,7 +8,7 @@
 
 <body>
   <%- include('./layout/header-forpageMember'); -%>
-    <section class="singleTrip-banner py-8 pt-lg-12 pb-lg-11">
+    <section class="singleTrip-banner pt-12 pb-8 pt-lg-14 pb-lg-11">
       <div class="container">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="pb-4 pb-lg-8">
           <ol class="breadcrumb fs-7 fs-lg-6 text-neutral-3">
@@ -18,7 +18,7 @@
           </ol>
         </nav>
         <h1 class="h3 fw-bold">日本環球影城</h1>
-        <div class="d-sm-flex justify-content-between mb-4">
+        <div class="d-flex justify-content-between mb-4">
           <div class="py-2">
             <p class="d-inline-block me-2 fw-medium">
               <span class="material-symbols-outlined span-star me-1">star</span>4.8
@@ -40,24 +40,23 @@
           </div>
           <div class="col-lg-6">
             <div class="d-flex mb-4 mb-lg-6 justify-content-between">
-              <div class="me-3 flex-fill">
+              <div class="me-2 me-sm-3 flex-fill">
                 <img class="w-100" src="/assets/images/singleTrip-banner-2.png" alt="trip photo">
               </div>
-              <div class="ms-3 flex-fill">
+              <div class="ms-2 ms-sm-3 flex-fill">
                 <img class="w-100" src="/assets/images/singleTrip-banner-4.png" alt="trip photo">
               </div>
             </div>
             <div class="d-flex mb-lg-4 justify-content-center">
-              <div class="me-3 flex-fill">
+              <div class="me-2 me-sm-3 flex-fill">
                 <img class="w-100" src="/assets/images/singleTrip-banner-3.png" alt="trip photo">
               </div>
-              <div class="ms-3 flex-fill relative">
+              <div class="ms-2 ms-sm-3 flex-fill relative">
                 <img class="w-100" src="/assets/images/singleTrip-banner-5.png" alt="trip photo">
                 <div class="more-img text-white absolute">
-
                   <a href="#" data-bs-toggle="modal" data-bs-target="#picModal">
                     <div class="d-inline-flex align-items-center">
-                      <span class="material-symbols-outlined span-image m-2">image</span>更多照片(10)
+                      <span class="material-symbols-outlined span-image m-2 ms-0">image</span>更多照片(10)
                     </div>
                   </a>
                 </div>
